--- a/index.html
+++ b/index.html
@@ -99,12 +99,12 @@
 
             <section class="container_piece container_piece_1" style="height:400px;">
               <div class="works_category_tiles"> 
-                  <a href="portfolio-sohufilm.html" class="works_category_tiles_item works_category_tiles_item2_1" style="background-color:#F13929;" title="SoHu Film Website Project">
+                  <a href="portfolio-sohufilm.html" class="works_category_tiles_item works_category_tiles_item2_1" style="background-color:#E60664;" title="SoHu Film Website Project">
                     <span class="works_category_tiles_item_cover bg">
                       <div class="works_category_tiles_item_cover_img bg_image" style="background:url(img/film_b.jpg); background-position:center; background-size:cover;"></div>
                     </span>
                     <span>
-                        <h2 class="heading2" style="color:#fff;">Sohu Film Website</h2>
+                        <h2 class="heading2">Sohu Film Website</h2>
                     </span>
                   </a>
               </div>
@@ -112,12 +112,12 @@
 
             <section class="container_piece container_piece_1" style="height:400px;">
               <div class="works_category_tiles"> 
-                  <a href="portfolio-sohufan.html" class="works_category_tiles_item works_category_tiles_item2_2" style="background-color: #f6cb21;" title="SoHu Cloud Engine Project">
+                  <a href="portfolio-sohufan.html" class="works_category_tiles_item works_category_tiles_item2_2" style="background-color: #FFB823;" title="SoHu Cloud Engine Project">
                     <span class="works_category_tiles_item_cover bg">
                       <div class="works_category_tiles_item_cover_img bg_image" style="background:url(img/5.png) 50% 50% no-repeat; background-size:contain;"></div>
                     </span>
                     <span>
-                        <h2 class="heading2" style="color:#fff;">Sohu Fans App</h2>
+                        <h2 class="heading2">Sohu Fans App</h2>
                     </span>
                   </a>
               </div>
