--- a/portfolio-hci.html
+++ b/portfolio-hci.html
@@ -76,7 +76,7 @@
 				</div>
 	        </div>
 
-            <div class="section part part_3" style="background: #258de8;">
+            <div class="section part part_3" style="background: #36BB93;">
             	<div class="section_img">
                 		<div class="section_bg_img section_bg_img_ani" style="background:url(img/hci_2.png) 50% 50% no-repeat;background-size:80%;"></div>
                 </div>
@@ -119,7 +119,7 @@
 		        <div class="section_text" style="width: 100%;padding-bottom:55px;margin: 0 auto; width:55%;">
 			        <div class="row_text">
 			        	<h2 style="color:#333;">Wireframe</h2>
-			        	<h3 style="color:#777;font-size:1.25rem; font-weight:300;">We <em style="font-style:normal; font-weight:600;color:#258de8;">rearranged</em> information hierarchy  and show the <em style="font-style:normal; font-weight:600;color:#258de8;">corn information directly</em>, also rethinked <em style="font-style:normal; font-weight:600;color:#258de8;">interaction mode</em> to imporve the user experience.</h3>
+			        	<h3 style="color:#777;font-size:1.25rem; font-weight:300;">We <em style="font-style:normal; font-weight:900;color:#36BB93;">rearranged</em> information hierarchy  and show the <em style="font-style:normal; font-weight:900;color:#36BB93;">corn information directly</em>, also rethinked <em style="font-style:normal; font-weight:900;color:#36BB93;">interaction mode</em> to imporve the user experience.</h3>
 			        </div>
 			    </div>
 			    <div class="design_img_b">
