--- a/portfolio-hci.html
+++ b/portfolio-hci.html
@@ -25,8 +25,8 @@
 		<div class="header">
 			<div class="header-box">
 			<div class="top-img">
-				<a href="index.html"><span class="logo_img hci_logo_img"></span></a>
-			</div>
+		        <a href="index.html"><span class="logo_img seeword_logo_img"></span></a>
+		    </div>
 				
 			<div id="navbar" class="menu">
 		      <a href="#" class="menubtn">menu</a>
@@ -76,7 +76,7 @@
 				</div>
 	        </div>
 
-            <div class="section part part_3" style="background: #36BB93;">
+            <div class="section part part_3" style="background:#258de8;">
             	<div class="section_img">
                 		<div class="section_bg_img section_bg_img_ani" style="background:url(img/hci_2.png) 50% 50% no-repeat;background-size:80%;"></div>
                 </div>
