--- a/portfolio-sohufilm.html
+++ b/portfolio-sohufilm.html
@@ -71,7 +71,7 @@
 				</div>
 	       </div>
 	       
-	       <div class="section part part_3" style="background:rgb(230,6,100);">
+	       <div class="section part part_3" style="background:#333;">
 	            <div class="section_img" style="background:#fff; width:65%;">
                 		<div class="section_bg_img section_bg_img_3" style="background:url(img/film1.png) 50% 50% no-repeat;background-size:95%;"></div>
                 </div>
@@ -88,12 +88,12 @@
 	       	<div class="section_img" style="left:0;background:#fff;width:70%;">
                 		<div class="section_bg_img section_bg_img_4"></div>
                 </div>
-                <div class="section_text" style="width: 30%;margin:0;position:absolute;padding-top:45vh;right:0;background:rgb(43,178,123);height:100%;top:0;">
+                <div class="section_text" style="width: 30%;margin:0;position:absolute;padding-top:45vh;right:0;background:rgb(230,6,100);height:100%;top:0;">
 			        <div class="title_inside" style="color:#fff; text-align: center; padding:0 20px;">Information Structure</div>
 			    </div>
 	       </div>
 
-	       <div class="section part part_5" style="background:rgb(43,178,123);">
+	       <div class="section part part_5" style="background:rgb(230,6,100);">
 	       	            <div class="row" style="padding-bottom: 40px;">
 		    				<div class="row_text">
 		    					<h2 style="color:#fff;">Sketch & Wireframe</h2>
@@ -122,7 +122,7 @@
 	       </div>
 	       
 	       <div class="section part part_6">
-	       	<div class="section_text" style="width: 100%;margin: 0;height:35%;background:rgb(43,178,123);">
+	       	<div class="section_text" style="width: 100%;margin: 0;height:35%;background:#333;">
 			        <div class="row_text">
 			        	<h2 style="color:#fff;padding-top: 157px;">Refine Process</h2>
 			        	<h3 style="color:#eee;font-size:1.25rem; font-weight:200;width:55%;margin:0 auto;"></h3>
@@ -134,17 +134,17 @@
 	       </div>
 
 	       <div class="section part part_7">
-	            <div class="section_text" style="width: 100%;margin: 0;background:rgb(43,178,123);height:30%;">
+	            <div class="section_text" style="width: 100%;margin: 0;height:35%;">
 			        <div class="row_text" style="padding:97px 0 0 0;">
-			        	<h2 style="color:#fff;">Visual Prototype</h2>
-			        	<h3 style="color:#eee;font-size:1.25rem; font-weight:200;width:55%;margin:0 auto;">Here is few prototype that we did.</h3>
+			        	<h2 style="color:#333;">Visual Prototype</h2>
+			        	<h3 style="color:#777;font-size:1.25rem; font-weight:200;width:55%;margin:0 auto;">Here is few prototype that we did.</h3>
 			        </div>
 			    </div>
-			    <div class="design_img_b" style="height:70%;">
+			    <div class="design_img_b" style="height:65%;">
 					       <div class="tv-box">
 					        <ul class="tv-slider">
-					            <li class="currented"><img src="img/film3.jpg" alt=""></li>
-					            <li class=""><img src="img/film1.jpg" alt=""></li>
+					            <li class=""><img src="img/film3.jpg" alt=""></li>
+					            <li class="currented"><img src="img/film1.jpg" alt=""></li>
 					            <li class=""><img src="img/film2.jpg" alt=""></li>
 					            <li class=""><img src="img/film4.jpg" alt=""></li>
 					            <li class=""><img src="img/film.jpg" alt=""></li>
@@ -152,9 +152,9 @@
 					       </div>
 					       <ul class="slider-indicator">
 						        <li class=""></li>
-						        <li class=""></li>
-						        <li class=""></li>
 						        <li class="currented"></li>
+						        <li class=""></li>
+						        <li class=""></li>
 						        <li class=""></li>
 						    </ul>
 				</div>
