--- a/portfolio-sohufan.html
+++ b/portfolio-sohufan.html
@@ -7,7 +7,7 @@
     <meta name="title" content=""/>
     <meta name="description" content=""/>
     <meta name="keywords" content=""/>
-    <title>Shuai | See Word Reading</title>
+    <title>Shuai | Sohu Fans App</title>
     <link rel="stylesheet" type="text/css" href="css/css3.css">
     <script type="text/javascript" src="js/jquery-1.8.0.min.js"></script>
     <script type="text/javascript" src="js/myjs.js"></script>
@@ -17,72 +17,92 @@
     <link rel="stylesheet" type="text/css" href="css/jquery.fullPage.css">
     <link rel="stylesheet" type="text/css" href="css/wireframe.css">
     <link rel="stylesheet" type="text/css" href="css/nav.css">
-    <link rel="stylesheet" type="text/css" href="css/font.css">
 </head>
 <body>
 	<div class="BD">
 		<div class="Bg">
 		<div class="header">
-			<div class="header-box">
-			<div class="top-img">
-				<a href="index.html"><span class="logo_img seeword_logo_img"></span></a>
-			</div>
+      <div class="header-box">
+      <div class="top-img">
+            <a href="index.html"><span class="logo_img seeword_logo_img"></span></a>
+        </div>
+        
+      <div id="navbar" class="menu">
+          <a href="#" class="menubtn">menu</a>
+          <!-- use captain icon for toggle menu -->
+          <div id="hamburgermenu" style="overflow: hidden; width: 0px;">
+            <ul>
+              <li><a href="portfolio.html">PORTFOLIO</a></li>
+              <li><a href="resume.html">RESUME</a></li>
+              <li><a href="myself.html">ABOUT ME</a></li>
+            </ul>
+          </div>
+        </div>
 
-			<div id="navbar" class="menu">
-		      <a href="#" class="menubtn">menu</a>
-		      <!-- use captain icon for toggle menu -->
-		      <div id="hamburgermenu" style="overflow: hidden; width: 0px;">
-		        <ul>
-		          <li><a href="portfolio.html">PORTFOLIO</a></li>
-		          <li><a href="resume.html">RESUME</a></li>
-		          <li><a href="myself.html">ABOUT ME</a></li>
-		        </ul>
-		      </div>
+    </div>
+    </div>
+
+	     <div class="main_design_container" id="fullpage">
+	      <div class="container_box cb_fans">
+
+	        <div class="section part part_0">
+	    		<div class="slide title_inside"><span>SoHu Fans App</span></div>
+	    		<a class="btn_down" href="#page2"><span class="btn_down_el"></span></a>
+	        </div>
+
+	        <div class="section part part_1">
+	    	  <div class="screen-main">
+                <span class="section_img">
+                		<img class="section_bg_img section_bg_img_1" src="img/5.png">
+                </span>
+
+	    		<div class="section_text" style="width: 100%;padding: 70px 150px;margin: 0;">
+			        <div class="title_inside"> About the Project</div>
+			        <div class="design_ui" style="color:#777;width: 55%;margin: 2rem 0 0 0;">
+			        	<span>Sohu Fans build a sharing and communicating platform which about the American drama, we want prove a best sharing and communicating experience for fans.</span>
+			        </div>
+			    </div>
+			  </div>  
+	        </div>
+
+	        <div class="section part part_2">
+	    	  <div class="section_text" style="width: 100%;padding-top:97px;margin: 0 auto; width:55%;">
+			        <div class="row_text row_text_1">
+			        	<h2 style="color:#333;">Product Demands</h2>
+			        	<h3 style="color:#777;font-size:1.25rem; font-weight:300;">We discussed with our target users to figure out the product demands.</h3>
+			        </div>
+			    </div>
+			    <div class="design_img_b design_img_b_2">
+					       <img class="design_img_box" src="img/fans.png" style="width:90%;">
+				</div> 
+	        </div>
+
+	         <div class="section part part_3" style="background:rgb(255,184,35);">
+            	<div class="section_img" style="width:65%; background:#fff;">
+                		<div class="section_bg_img section_bg_img_ani" style="background:url(img/fans2.png) 50% 50% no-repeat;background-size:70%;"></div>
+                </div>
+
+	    		<div class="section_text" style="width:35%; z-index:2; position:relative;margin-left:0px;padding-right:20px;">
+			        <div class="title_inside" style="color:#fff;text-align:left;padding-left: 100px;">Wireframe</div>
+			        <div class="design_ui" style="color:#eee;text-align:left;padding-left: 100px;">
+			        	<span>Make the App's information hierarchy accessible.</span>
+			        </div>
+			    </div>
+	        </div> 
+
+		    <div class="section part part_4" style="background:#fff;">
+		        <div class="section_text" style="width: 100%;padding-bottom:55px;margin: 0 auto; width:55%;">
+			        <div class="row_text">
+			        	<h2 style="color:#333;">Prototype</h2>
+			        </div>
+			    </div>
+			    <div class="design_img_b">
+					       <img class="design_img_box" src="img/fans1.png" style="width:90%;">
+				</div>
 		    </div>
 
-		</div>
-		</div>
-
-	    <div class="main_design_container">
-	      <div class="container_box cb_fans">
-	       <div class="part part_1">
-	    	<div class="title_inside">SoHu Dramas Fans APP</div>
-	    	<div class="title_line"></div>
-	    	 <div class="design_ui"><span>Providing a <em>COMMUNICATION PLATFORM</em> for fans which like dramas</span></div>
-	        </div>
-	       <div class="part part_2">
-	       	 <div class="title_inside">DESIGN PROCESS</div>
-	        <div class="title_line"></div>
-	        <div class="number_box nb">2</div>
-	        <div class="title_inside"> UI DESIGN</div>
-	        <div class="title_line"></div>
-	        <div class="design_ui"><span>A Combination of Flat and Blur<br>
-for an Simple and Clearly.</span></div>
-            <div class="design_img"><img src="img/fans1.jpg"></div>
-           </div>
-           <div class="part part_3"> 
-            <div class="number_box nb">3</div>
-	        <div class="title_inside"> Framework</div>
-	        <div class="title_line"></div>
-	        <div class="design_ui"><span></span></div>
-            <div class="design_img"><img src="img/fans.jpg"></div>
-            <div class="design_img"><img src="img/fans2.jpg"></div>
 	      </div>
-	      </div> 
-	    </div>
-    
-
-	<!--底页-->
-<div class="footer">
-	    	<div class="bot-link">
-	        	<div class="link-list">
-	        		  <ul class="linked">
-	        			<li class="lik"><span class="phone"><a href="tel:9175452916">917-545-2916</a></span></li>
-	        			<li class="lik"><span class="email"><a href="mailto:shuaizhou487@gmail.com">shuaizhou487@gmail.com</a></span></li>
-	        		  </ul>
-	        	</div>
-        	</div>	
-    </div>
+	     </div>
 
 </body>
 </html>
