--- a/resume.html
+++ b/resume.html
@@ -8,23 +8,23 @@
     <meta name="description" content=""/>
     <meta name="keywords" content=""/>
     <title>Shuai | Resume</title>
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="css/css3.css">
     <script type="text/javascript" src="js/jquery-1.8.0.min.js"></script>
-    <script type="text/javascript" src="js/myjs.js"></script>
     <script type="text/javascript" src="js/menu.js"></script>
     <link rel="stylesheet" type="text/css" href="css/nav.css">
+</head>
 <body>
 	<div class="BD">
 		<div class="Bg">
 		<div class="header">
 			<div class="header-box">
 			<div class="top-img">
-				<a href="index.html"><span class="logo_img"></span></a>
+				<a href="index.html"><span class="logo_img seeword_logo_img"></span></a>
 			</div>
 				
 			<div id="navbar" class="menu">
 		      <a href="#" class="menubtn">menu</a>
+		      <!-- use captain icon for toggle menu -->
 		      <div id="hamburgermenu" style="overflow: hidden; width: 0px;">
 		        <ul>
 		          <li><a href="portfolio.html">PORTFOLIO</a></li>
@@ -69,7 +69,7 @@
 	    		<div class="ati">
 	    	      <div class="main_t">
 	    			<span class="main_t_l">UI & UX Designer in HCI-TV, Cincinnati,Ohio, USA</span>
-	    			<span class="main_t_r">May 2015 - Present</span>
+	    			<span class="main_t_r">May 2015 - September 2015</span>
 	    		  </div>
 	    		<p>- Re-design the Media care App for Android TV, design the monile website App</p>
 	    	    </div>
@@ -149,20 +149,6 @@
 	    		<div class="ati"><span class="main_t">HTML5,  &nbspCSS3,  &nbspjQuery,  &nbspAdobe Software,  &nbspInVison,  &nbspHype 3,  &nbspSketch 3,  &nbspMicrosoft Software</span></div>
 	    	</section>
 	    </div>
-<!--到顶部的按钮-->
-<div id="go-top" class="go-top"><a href="#"><span></span></a></div>
-<!--底页-->
-    <div class="footer">
-	    	<div class="bot-link">
-	        	<div class="link-list">
-	        		  <ul class="linked">
-	        			<li class="lik"><span class="linkein"><a href="https://www.linkedin.com/pub/shuai-zhou/b2/729/898" target="value"></a></span></li>
-	        			<li class="lik"><span class="email"><a href="mailto:shuaizhou487@gmail.com"></a></span></li>
-	        			<li class="lik"><span class="phone"><a href="tel:9175452916"></a></span>
-	        		  </ul>
-	        	</div>
-        	</div>	
-    </div>
  </div>
 
 
