--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,7 @@
           <!-- use captain icon for toggle menu -->
           <div id="hamburgermenu" style="overflow: hidden; width: 0px;">
             <ul>
-              <li><a href="portfolio.html">PORTFOLIO</a></li>
+              <li><a href="index.html">HOME</a></li>
               <li><a href="resume.html">RESUME</a></li>
               <li><a href="myself.html">ABOUT ME</a></li>
             </ul>
@@ -45,9 +45,9 @@
 
         <div class="container" id="project_intro">
 
-          <section class="container_piece container_piece_1" style="height:400px;">
+            <section class="container_piece container_piece_1" style="height:400px;">
               <div class="works_category_tiles"> 
-                  <a href="portfolio-hci.html" class="works_category_tiles_item works_category_tiles_item2_1" style="background-color: #eff7f9;" title="Health Care Information TV APP Project">
+                  <a href="portfolio-hci.html" class="works_category_tiles_item works_category_tiles_item2_1" style="background-color:rgb(37,141,232);" title="Health Care Information TV APP Project">
                     <span class="works_category_tiles_item_cover bg">
                       <div class="works_category_tiles_item_cover_img bg_image" style="background:url(img/hci_b.jpg); background-position:center; background-size:cover;"></div>
                     </span>
@@ -73,7 +73,7 @@
 
             <section class="container_piece container_piece_1" style="height:400px;">
               <div class="works_category_tiles"> 
-                  <a href="portfolio-sohufilm.html" class="works_category_tiles_item works_category_tiles_item2_1" style="background-color: rgb(43,178,123);" title="SoHu Film Website Project">
+                  <a href="portfolio-sohufilm.html" class="works_category_tiles_item works_category_tiles_item2_1" style="background-color:#E60664;" title="SoHu Film Website Project">
                     <span class="works_category_tiles_item_cover bg">
                       <div class="works_category_tiles_item_cover_img bg_image" style="background:url(img/film_b.jpg); background-position:center; background-size:cover;"></div>
                     </span>
@@ -86,25 +86,22 @@
 
             <section class="container_piece container_piece_1" style="height:400px;">
               <div class="works_category_tiles"> 
-                  <a href="portfolio-sce.html" class="works_category_tiles_item works_category_tiles_item2_2" style="background-color: #666;" title="SoHu Cloud Engine Project">
+                  <a href="portfolio-sohufan.html" class="works_category_tiles_item works_category_tiles_item2_2" style="background-color: #FFB823;" title="SoHu Cloud Engine Project">
                     <span class="works_category_tiles_item_cover bg">
-                      <div class="works_category_tiles_item_cover_img bg_image" style="background:url(img/sce1.png); background-position:center; background-size:cover;"></div>
+                      <div class="works_category_tiles_item_cover_img bg_image" style="background:url(img/5.png) 50% 50% no-repeat; background-size:contain;"></div>
                     </span>
                     <span>
-                        <h2 class="heading2" style="color:#fff;">Sohu SCE Website</h2>
+                        <h2 class="heading2">Sohu Fans App</h2>
                     </span>
                   </a>
               </div>
             </section>
-            
-        </div>
+
+      </div>
 
 
 </div>
 
-    <div id="go-top">
-    	<a href=""><span></span></a>
-    </div>
 
 	<!--底页-->
     <div class="footer">
