--- a/myself.html
+++ b/myself.html
@@ -55,7 +55,7 @@
 		        </div>
 			</div>
 
-			<div class="section part part_1">
+			<!--<div class="section part part_1">
 				<div class="maps_china">
 					<div class="img_plan"><img src="img/plan.png"></div>
                     <div class="img_maps_china"><img src="img/c_map.png"></div>
@@ -82,17 +82,7 @@
 	      </div>
 	    </div>  
 
-		<div class="footer">
-		    	<div class="bot-link">
-		        	<div class="link-list">
-		        		  <ul class="linked">
-		        			<li class="lik"><span class="linkein"><a href="https://www.linkedin.com/pub/shuai-zhou/b2/729/898" target="value"></a></span></li>
-		        			<li class="lik"><span class="email"><a href="mailto:shuaizhou487@gmail.com"></a></span></li>
-		        			<li class="lik"><span class="phone"><a href="tel:9175452916"></a></span>
-		        		  </ul>
-		        	</div>
-	        	</div>	
-	    </div>
+		-->
 </div>
 </div>
 
