--- a/portflio-hci.html
+++ b/portflio-hci.html
@@ -32,7 +32,7 @@
 		      <!-- use captain icon for toggle menu -->
 		      <div id="hamburgermenu" style="overflow: hidden; width: 0px;">
 		        <ul>
-		          <li><a href="portfolio.html">PORTFOLIO</a></li>
+		          <li><a href="portflio.html">PORTFLIO</a></li>
 		          <li><a href="resume.html">RESUME</a></li>
 		          <li><a href="myself.html">ABOUT ME</a></li>
 		        </ul>
