--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
             <section class="container_piece container_piece_1" style="height:400px;">
               <div class="works_category_tiles"> 
-                  <a href="portfolio-hci.html" class="works_category_tiles_item works_category_tiles_item2_1" style="background-color:rgb(37,141,232);" title="Health Care Information TV APP Project">
+                  <a href="portflio-hci.html" class="works_category_tiles_item works_category_tiles_item2_1" style="background-color:rgb(37,141,232);" title="Health Care Information TV APP Project">
                     <span class="works_category_tiles_item_cover bg">
                       <div class="works_category_tiles_item_cover_img bg_image" style="background:url(img/hci_b.jpg); background-position:center; background-size:cover;"></div>
                     </span>
@@ -81,7 +81,7 @@
 
             <section class="container_piece container_piece_1" style="height:400px;">
               <div class="works_category_tiles"> 
-                  <a href="portfolio-seewordapp.html" class="works_category_tiles_item works_category_tiles_item2_2" style="background-color: #79CDE2;" title="See Word Reading Project">
+                  <a href="portflio-seewordapp.html" class="works_category_tiles_item works_category_tiles_item2_2" style="background-color: #79CDE2;" title="See Word Reading Project">
                     <span class="works_category_tiles_item_cover bg">
                       <div class="works_category_tiles_item_cover_img bg_image" style="background:url(img/seeword22.png); background-position:center; background-size:cover;"></div>
                     </span>
@@ -94,7 +94,7 @@
 
             <section class="container_piece container_piece_1" style="height:400px;">
               <div class="works_category_tiles"> 
-                  <a href="portfolio-sohufilm.html" class="works_category_tiles_item works_category_tiles_item2_1" style="background-color:#E60664;" title="SoHu Film Website Project">
+                  <a href="portflio-sohufilm.html" class="works_category_tiles_item works_category_tiles_item2_1" style="background-color:#E60664;" title="SoHu Film Website Project">
                     <span class="works_category_tiles_item_cover bg">
                       <div class="works_category_tiles_item_cover_img bg_image" style="background:url(img/film_b.jpg); background-position:center; background-size:cover;"></div>
                     </span>
@@ -107,7 +107,7 @@
 
             <section class="container_piece container_piece_1" style="height:400px;">
               <div class="works_category_tiles"> 
-                  <a href="portfolio-sohufan.html" class="works_category_tiles_item works_category_tiles_item2_2" style="background-color: #FFB823;" title="SoHu Cloud Engine Project">
+                  <a href="portflio-sohufan.html" class="works_category_tiles_item works_category_tiles_item2_2" style="background-color: #FFB823;" title="SoHu Cloud Engine Project">
                     <span class="works_category_tiles_item_cover bg">
                       <div class="works_category_tiles_item_cover_img bg_image" style="background:url(img/5.png) 50% 50% no-repeat; background-size:contain;"></div>
                     </span>
