--- a/myself.html
+++ b/myself.html
@@ -33,9 +33,9 @@
 		      <!-- use captain icon for toggle menu -->
 		      <div id="hamburgermenu" style="overflow: hidden; width: 0px;">
 		        <ul>
-		          <li><a href="portfolio.html">HOME</a></li>
+		          <li><a href="index.html">HOME</a></li>
+		          <li><a href="portflio.html">PORTFLIO</a></li>
 		          <li><a href="resume.html">RESUME</a></li>
-		          <li><a href="myself.html">ABOUT ME</a></li>
 		        </ul>
 		      </div>
 		    </div>
