--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 				<p class="p1">I Love What I do</p>
 				<p class="p3"></p>
 			  </div>	
-				<p class="p4">Take a look for yourself</p>
+				<p class="p4">Scroll down to learn more</p>
 				<p class="p2"><a href="#project_intro"></a></p>	
 			</div>
 		</div>
