--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" type="text/css" href="css/wireframe.css">
     <link rel="stylesheet" type="text/css" href="css/font.css">
     <link rel="stylesheet" type="text/css" href="css/nav.css">
-    <script type="text/javascript" href="js/menu.js"></script>
+    <script type="text/javascript" src="js/menu.js"></script>
     <script type="text/javascript" src="js/processing.min.js"></script>
 </head>
 <body>
@@ -27,7 +27,7 @@
             <a href="index.html"><span class="logo_img seeword_logo_img"></span></a>
         </div>
         
-      <div class="menu_list">
+     <!-- <div class="menu_list">
           <div id="menu_list_ha">
             <ul>
               <li><a href="myself.html">ABOUT ME</a></li>
@@ -35,7 +35,19 @@
               <li><a href="portflio.html">PORTFLIO</a></li>
             </ul>
           </div>
-      </div>
+          </div> -->
+
+          <div id="navbar" class="menu">
+          <a href="#" class="menubtn">menu</a>
+          <!-- use captain icon for toggle menu -->
+          <div id="hamburgermenu" style="overflow: hidden; width: 0px;">
+            <ul>
+              <li><a href="portflio.html">PORTFLIO</a></li>
+              <li><a href="resume.html">RESUME</a></li>
+              <li><a href="myself.html">ABOUT ME</a></li>
+            </ul>
+          </div>
+        </div>
 
     </div>
     </div>
