--- a/resume.html
+++ b/resume.html
@@ -28,7 +28,7 @@
 		      <div id="hamburgermenu" style="overflow: hidden; width: 0px;">
 		        <ul>
 		        	<li><a href="index.html">HOME</a></li>
-		          <li><a href="portflio.html">PORTFLIO</a></li>
+		          <li><a href="portfolio.html">PORTFOLIO</a></li>
 		          <li><a href="myself.html">ABOUT ME</a></li>
 		        </ul>
 		      </div>
