--- a/myself.html
+++ b/myself.html
@@ -34,7 +34,7 @@
 		      <div id="hamburgermenu" style="overflow: hidden; width: 0px;">
 		        <ul>
 		          <li><a href="index.html">HOME</a></li>
-		          <li><a href="portflio.html">PORTFLIO</a></li>
+		          <li><a href="portfolio.html">PORTFLIO</a></li>
 		          <li><a href="resume.html">RESUME</a></li>
 		        </ul>
 		      </div>
