--- a/myself.html
+++ b/myself.html
@@ -46,43 +46,54 @@
         <div class="main_design_container" id="fullpage">
 	      <div class="container_box">
 
-	      	<div class="section part part_0" style="background:#ffc706;">
+	      	<div class="section part part_0" style="background:rgb(255, 199, 6);">
 			    <div class="personal_intro">
-		                        <div class="personal_intro_infor">
-		                            <div class="personal_intro_infor_left"></div>
-		                            <div class="personal_intro_infor_right"><h1>My name is <b>Shuai Zhou</b></h1><p>I am looking for a full time job which position about UI & UX design.</p></div>
-		                        </div>
+		                   <div class="personal_intro_infor">
+		                       <div class="personal_intro_infor_left"></div>
+		                       <div class="personal_intro_infor_right"><h1>Hello, I am <b>Shuai Zhou</b></h1><p>I am looking for a <em style="color:#333;font-size:1.5rem;font-weight:700;">UI & UX design</em> full time job.</p></div>
+		                   </div>
 		        </div>
 			</div>
 
-			<!--<div class="section part part_1">
-				<div class="maps_china">
-					<div class="img_plan"><img src="img/plan.png"></div>
-                    <div class="img_maps_china"><img src="img/c_map.png"></div>
-                    <div class="china_text"><span>In order to help me broaden my horizons and learn things outside of my special areas, I came to US to begin my master degree in 2012.</span></div>
-                </div>
+			<div class="section part part_1">
 
-                <div class="maps_ohio">
-                    <div class="img_daap"><img src="img/daap.png"></div>
-                    <div class="img_maps_ohio"><img src="img/oh_map.png"></div>
-                    <div class="ohio_text"><span>I will graduate from University of Cincinnati, School of Design. The best of 25 design shcool in the world.</span></div>
+                <div class="mani_img"><img style="width:35%;" src="img/daap.png"></div>
+
+                <div class="mani_text">
+                	<div class=""><span>I will graduate from University of Cincinnati, DAAP College, School of Design in December 2015. The best of 25 design shcool in the world.</span></div>
                 </div>
 			</div>
 
-			<div class="section part part_2">
-				<div class="img_computer"><img src="img/computer.png"></div>
-				<div class="change_text"><span>Before I come to US, I have no idea which area I should focus on. I find what I was interested after I came.</span></div>
+			<div class="section part part_2" style="background:rgb(255, 199, 6);">
+				<div class="maps_top"><div class="img_plan"></div></div>
+				
+				<div class="maps_width">
+					<div class="maps maps_china"></div>
+					<div class="maps maps_ohio"></div>
+				</div>
+
+                <div class="maps_text">
+                	<div class="mani_text"><span>I came to US to study my master degree in 2012. I decided study abroad because I want to know more difference about the world around me and extend my horizons of thinking, but I don't have specific destination when I arrived US.</span></div>
+                </div>
 			</div>
 
 			<div class="section part part_3">
-				<div class="img_computer"><img src="img/computer.png"></div>
-				<div class="change_text"><span>I want learn more about the UI & UX design from the real projects. By a lucky coincidence, I have a very good opportunity to join Sohu Internet company which is one of biggest internet company in China. I dropped off shcool and go back to China, Working for HTML Group and UED Group.</span></div>
+				<div class="mani_img"><img src="img/computer.png"></div>
+				<div class="mani_text"><span>There has many of the meaningful courses and projects in my first year. For instance, the research methodology course, design strategy theory course, see word reading app project and P&G project for aged people. And also I saw our life was be changed by internet products, then I find what I want do.</span></div>
+			</div>
+
+			<div class="section part part_4">
+				<div class="mani_img"><img src="img/sohu_product.png"></div>
+				<div class="mani_text"><span>I have a strong desire to learn more about the UI & UX design from the real projects. By a lucky coincidence, I have a very good opportunity to join Sohu Internet company which is one of biggest internet company in China. I dropped off shcool and go back to China, Working for HTML Group and UED Group.</span></div>
+			</div>
+
+			<div class="section part part_5">
+				<div class="mani_text"><span>After the work, I was back to shcool to finish my master degress. Now, I want find a full time job about the UI & UX design position.</span></div>
 			</div>
 
 	      </div>
 	    </div>  
 
-		-->
 </div>
 </div>
 
