--- a/portfolio-hci.html
+++ b/portfolio-hci.html
@@ -130,11 +130,11 @@
 		    	<div class="section_text" style="width: 100%;padding-bottom:55px;margin: 0 auto; width:55%;">
 			        <div class="row_text row_text_1">
 			        	<h2 style="color:#333;">User Testing</h2>
-			        	<h3 style="color:#777;font-size:1.25rem; font-weight:300;">Engineers help us to build five simply prototypes doing user test. Then anaylze which one is more better, also find the problems that we neglected.</h3>
+			        	<h3 style="color:#777;font-size:1.25rem; font-weight:300;">Engineers help us to build four simply prototypes doing user test. Then anaylze which one is more better, also find the problems that we neglected.</h3>
 			        </div>
 			    </div>
 			    <div class="design_img_b design_img_b_2">
-					       <img class="design_img_box" src="img/hci_9.png" style="width:90%;">
+					       <img class="design_img_box" src="img/hci_9.png" style="width:50%;">
 				</div>
 		    </div>
 		    
@@ -144,7 +144,7 @@
                 </div>
 
 	    		<div class="section_text" style="width:35%; z-index:2; position:relative;margin-left:0px;padding-right:20px;">
-			        <div class="title_inside" style="color:#fff;text-align:left;padding-left: 100px;">Why We Pick Up This Idea?</div>
+			        <div class="title_inside" style="color:#fff;text-align:left;padding-left: 100px;">Refine</div>
 			        <div class="design_ui" style="color:#eee;text-align:left;padding-left: 100px;">
 			        	<p>- Less operation</p>
 			        	<p>- Show information clear</p>
@@ -160,7 +160,7 @@
                 </div>
 
 	    		<div class="section_text" style="width:35%; z-index:2; position:relative;margin-left:0px;padding-right:20px;">
-			        <div class="title_inside" style="color:#fff;text-align:left;padding-left: 100px;">Refine</div>
+			        <div class="title_inside" style="color:#fff;text-align:left;padding-left: 100px;">Key design elements for refine</div>
 			        <div class="design_ui" style="color:#eee;text-align:left;padding-left: 100px;">
 			        	<span>Refine the design based on the idea that we pick up.</span>
 			        </div>
