--- a/hci-detail.html
+++ b/hci-detail.html
@@ -19,7 +19,7 @@
         
         <div class="context">
 		    <div class="context_left">
-		      <div class="context_left_title"><span>Health Care Information Television App</span></div>  
+		      <div class="context_left_title"><span>UI & UX Design</span></div>  
 		      <div></div>
 		    </div>
 
