--- a/portfolio-sohufilm.html
+++ b/portfolio-sohufilm.html
@@ -169,6 +169,14 @@
 			    </div>
             </div>
 
+            <div class="section part part_9">
+            	<div class="section_text" style="width: 100%;padding-bottom:55px;margin: 0;">
+			        <div class="row_text">
+			        	<a href="sohu-film-detail.html" target="view_window" style="position: relative;display: inline-block;padding: 20px 25px;background:rgba(230,6,100,.98);border-radius: 10px; color:#fff;"><h1>See More Details</h1></a>
+			        </div>
+			    </div>
+            </div>
+
            </div>
 	      </div>  
 	    </div>
