--- a/myself.html
+++ b/myself.html
@@ -35,7 +35,7 @@
 		        <ul>
 		          <li><a href="index.html">HOME</a></li>
 		          <li><a href="portfolio.html">PORTFLIO</a></li>
-		          <li><a href="resume.html">RESUME</a></li>
+		          <li><a href="img/ShuaiZhou's Resume.pdf" target="view_window">RESUME</a></li>
 		        </ul>
 		      </div>
 		    </div>
