--- a/see-word-reading-detail.html
+++ b/see-word-reading-detail.html
@@ -47,7 +47,7 @@
                         <h1>RESEARCH</h1>
                         <p>In the beginning of this project, we had meeting with teachers try to understand the project and find they requirements. The See Word Reading Teacher App have two main functions, the information review and set up the task contents.</p>
                         <b>Online Survey</b>
-                        <div class="sh_img_3"></div>
+                        <div class="swr_img_1"></div>
                         <b>User Interview</b>
                         <div class="sh_img_4"></div><br>
                         <b>User Journey</b>
