--- a/myself.html
+++ b/myself.html
@@ -34,7 +34,7 @@
 		      <div id="hamburgermenu" style="overflow: hidden; width: 0px;">
 		        <ul>
 		          <li><a href="index.html">HOME</a></li>
-		          <li><a href="portfolio.html">PORTFLIO</a></li>
+		          <li><a href="portfolio.html">PORTFOLIO</a></li>
 		          <li><a href="img/ShuaiZhou's Resume.pdf" target="view_window">RESUME</a></li>
 		        </ul>
 		      </div>
@@ -60,7 +60,7 @@
                 <div class="mani_img"><img style="width:35%;" src="img/daap.png"></div>
 
                 <div class="mani_text">
-                	<div class=""><span>I will graduate from University of Cincinnati, DAAP College, School of Design in December 2015. The best of 25 design shcool in the world.</span></div>
+                	<div class=""><span>I graduated from the University of Cincinnati, DAAP College, School of Design in December 2015. DAAP is rated among the best 25 design schools in the world.</span></div>
                 </div>
 			</div>
 
@@ -73,22 +73,22 @@
 				</div>
 
                 <div class="maps_text">
-                	<div class="mani_text"><span>I came to US to study my master degree in 2012. I decided study abroad because I want to know more difference about the world around me and extend my horizons of thinking, but I don't have specific destination when I arrived US.</span></div>
+                	<div class="mani_text"><span>I came to the US in 2012 to to earn my masters degree. I decided to study abroad because I wanted to learn about the world around me and expand my horizons of thinking, but I didn't have specific destination in mind at first.</span></div>
                 </div>
 			</div>
 
 			<div class="section part part_3">
 				<div class="mani_img"><img src="img/computer.png"></div>
-				<div class="mani_text"><span>There has many of the meaningful courses and projects in my first year. For instance, the research methodology course, design strategy theory course, see word reading app project and P&G project for aged people. And also I saw our life was be changed by internet products, then I find what I want do.</span></div>
+				<div class="mani_text"><span>I was fortunate to get involved in many meaningful courses and projects in my first year. For instance, a research methodology course, design strategy theory course, See Word reading app project and a P&G project for the elderly. As I gained a deeper understanding of how lives can be positively affected through online technologies, I found what I wanted to do.</span></div>
 			</div>
 
 			<div class="section part part_4">
 				<div class="mani_img"><img src="img/sohu_product.png"></div>
-				<div class="mani_text"><span>I have a strong desire to learn more about the UI & UX design from the real projects. By a lucky coincidence, I have a very good opportunity to join Sohu Internet company which is one of biggest internet company in China. I dropped off shcool and go back to China, Working for HTML Group and UED Group.</span></div>
+				<div class="mani_text"><span>Learning from real-world projects is essential. By good fortune, I recently had the opportunity to join Sohu Internet company (one of the biggest internet companies in China), working for their HTML and UED departments.</span></div>
 			</div>
 
 			<div class="section part part_5">
-				<div class="mani_text"><span>After the work, I was back to shcool to finish my master degress. Now, I want find a full time job about the UI & UX design position.</span></div>
+				<div class="mani_text"><span>After working at Sohu, I returned to school to finish my masters degree. I am now in search of a full-time job in UI & UX design.</span></div>
 			</div>
 
 	      </div>
