--- a/hci-detail.html
+++ b/hci-detail.html
@@ -95,7 +95,7 @@
 
                 <div class="context_p">
                     <div class="context_p_box">
-                        <h3>Redesign</h3><br>
+                        <h3>Rapid Prototypes</h3><br>
                         <p>Some of the obvious questions can be solved by a designer. Designers are good at designing the clear interface, readable information and accessible functionality, helping users have a better experience than before. The redesign prototypes (Figure 7) have a better information hierarchy, show the information more clearly and readably. We contacted the programer to reduce the operation steps, to make the animation more comfortable.</p>
                         <div class="context_img_7"></div>
                     </div>
