--- a/index.html
+++ b/index.html
@@ -90,6 +90,19 @@
 
             <section class="container_piece container_piece_1" style="height:400px;">
               <div class="works_category_tiles"> 
+                  <a href="portfolio-tourconnect.html" class="works_category_tiles_item works_category_tiles_item2_1" style="background-color:rgb(240,123,13);" title="Health Care Information TV APP Project">
+                    <span class="works_category_tiles_item_cover bg">
+                      <div class="works_category_tiles_item_cover_img bg_image" style="background:url(img/tourconnect_bg.png); background-position:center; background-size:cover;"></div>
+                    </span>
+                    <span>
+                        <h2 class="heading2">TourConnect Website Application</h2>
+                    </span>
+                  </a>
+              </div>
+            </section>
+
+            <section class="container_piece container_piece_1" style="height:400px;">
+              <div class="works_category_tiles"> 
                   <a href="portfolio-hci.html" class="works_category_tiles_item works_category_tiles_item2_1" style="background-color:rgb(37,141,232);" title="Health Care Information TV APP Project">
                     <span class="works_category_tiles_item_cover bg">
                       <div class="works_category_tiles_item_cover_img bg_image" style="background:url(img/hci_b.jpg); background-position:center; background-size:cover;"></div>
@@ -108,7 +121,7 @@
                       <div class="works_category_tiles_item_cover_img bg_image" style="background:url(img/seeword22.png); background-position:center; background-size:cover;"></div>
                     </span>
                     <span>
-                        <h2 class="heading2">See Word Reading</h2>
+                        <h2 class="heading2">See Word Reading App</h2>
                     </span>
                   </a>
               </div>
