--- a/portfolio-seewordapp.html
+++ b/portfolio-seewordapp.html
@@ -60,7 +60,7 @@
 	    		<div class="section_text" style="width: 100%;padding: 70px 150px;margin: 0;">
 			        <div class="title_inside"> About the Project</div>
 			        <div class="design_ui" style="color:#777;width: 55%;margin: 2rem 0 0 0;">
-			        	<span>Collaborated with the See Word Reading Student App to help teachers set up the Course Contents and find the Valuable Data Informations to be Efficiently & Accurately .</span>
+			        	<span><a href="http://www.seewordreading.com/" target="_blank">See Word Reading</a> is a personalized, fun & effective platform for students to learn early literacy skills through a suite of two applications a teacher app and student app.</span>
 			        </div>
 			    </div>
 			  </div>  
@@ -136,7 +136,7 @@
 		    		<div class="container" style="background-color:#fff; overflow:visible;">
 		    			<div class="row" style="height:300px;padding-top: 97px;">
 		    				<div class="row_text">
-		    					<h2>Wireframe</h2>
+		    					<h2>Ideation</h2>
 		    					<h3 style="color:#777;font-size:1.25rem; font-weight:200;">A couple out of a handful of iterations I went through.</h3>
 		    				</div>
 		    			</div>
