--- a/resume.html
+++ b/resume.html
@@ -68,6 +68,15 @@
 	    		<h1>EXPERIENCE</h1>
 	    		<div class="ati">
 	    	      <div class="main_t">
+	    			<span class="main_t_l">UX Designer in TourConnect, Dallas,Texas, USA</span>
+	    			<span class="main_t_r">April 2016 - December 2016</span>
+	    		  </div>
+	    		<p>- Re-design the Build Connection experience for user.</p>
+	    		<p>- Create the functions for Rates&Contracts tool.</p>
+	    	    </div>
+
+	    		<div class="ati">
+	    	      <div class="main_t">
 	    			<span class="main_t_l">UI & UX Designer in HCI-TV, Cincinnati,Ohio, USA</span>
 	    			<span class="main_t_r">May 2015 - September 2015</span>
 	    		  </div>
@@ -93,7 +102,7 @@
 	    	    <div class="ati">
 	    	      <div class="main_t">
 	    			<span class="main_t_l">TA, GA  The University Of Cincinnati, Cincinnati, Ohio, USA</span>
-	    			<span class="main_t_r">August 2012 - Present</span>
+	    			<span class="main_t_r">August 2012 - December 2015</span>
 	    		  </div>
 	    		<p>- Worked for Professor Oscar Fernandez as teaching assistant in Visual History course to help students with their homework</p>
 	    		<p>- Worked for Professor Ben Meyer as graduate assistant to support him design the APP.</p>
@@ -113,7 +122,7 @@
 
 	    		<div class="ati">
 	    	      <div class="main_t">
-	    			<span class="main_t_l">UED Blog Website</span>
+	    			<span class="main_t_l">Sohu UED Blog Website</span>
 	    			<span class="main_t_r">October 2014 - December 2014</span>
 	    		  </div>
 	    		<p>- Responsive UI & UX Design, Front-End Developer</p>
@@ -129,7 +138,7 @@
 
 	    	    <div class="ati">
 	    	      <div class="main_t">
-	    			<span class="main_t_l">SCE Website</span>
+	    			<span class="main_t_l">Sohu Cloud Service Website</span>
 	    			<span class="main_t_r">January 2014 - May 2014</span>
 	    		  </div>
 	    		<p>- Responsive UI & UX Design</p>
@@ -138,7 +147,7 @@
 	    	    <div class="ati">
 	    	      <div class="main_t">
 	    			<span class="main_t_l">Seeword Reading APP & Seeword Reading Website</span>
-	    			<span class="main_t_r">January 2013 - Present</span>
+	    			<span class="main_t_r">January 2013 - December 2015</span>
 	    		  </div>
 	    		<p>- According to the user test to improve the APP’s Interface.</p>
 	    		<p>- Responsive UI & UX design the website</p>
