--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
 
             <section class="container_piece container_piece_1" style="height:400px;">
               <div class="works_category_tiles"> 
-                  <a href="portfolio-tourconnect.html" class="works_category_tiles_item works_category_tiles_item2_1" style="background-color:rgb(240,123,13);" title="Health Care Information TV APP Project">
+                  <a href="portfolio-tourconnect.html" class="works_category_tiles_item works_category_tiles_item2_1" style="background-color:rgb(240,123,13);" title="TourConnect">
                     <span class="works_category_tiles_item_cover bg">
-                      <div class="works_category_tiles_item_cover_img bg_image" style="background:url(img/tourconnect_bg.png); background-position:center; background-size:cover;"></div>
+                      <div class="works_category_tiles_item_cover_img bg_image" style="background:url(img/tourconnect_explain.svg) no-repeat; background-position:center; background-size:20%;"></div>
                     </span>
                     <span>
-                        <h2 class="heading2">TourConnect Website Application</h2>
+                        <h2 class="heading2">TourConnect</h2>
                     </span>
                   </a>
               </div>
