--- a/myself.html
+++ b/myself.html
@@ -88,7 +88,7 @@
 			</div>
 
 			<div class="section part part_5">
-				<div class="mani_text"><span>After working at Sohu, I returned to school to finish my masters degree. I am now in search of a full-time job in UI & UX design.</span></div>
+				<div class="mani_text"><span>After working at Sohu, I returned to school to finish my masters degree. Then I was worked in a startup company named TourConnect for 9 months. NowI am looking for a new position in user experience design.</span></div>
 			</div>
 
 	      </div>
