--- a/portfolio-tourconnect.html
+++ b/portfolio-tourconnect.html
@@ -67,8 +67,8 @@
 
 	    		<div class="section_text" style="width:55%; z-index:2; position:relative; margin:0 auto; text-align:center;">
 			        <div class="title_inside" style="text-align:center;color:#00BCD4;">Our Goal</div>
-			        <div class="design_ui" style="text-align:center;">
-			        	<span>The primary goal of my job is to provide better experience for users in Connection, in order to increment the business opportunities for users.​</span>
+			        <div class="design_ui" style="text-align:left;">
+			        	<span>I was joined TourConnect as a UX designer. My work include new features development and redesign the existing product to improve a better experience for user. I focus on streamlines product workflow and design doable solutions. I am the only designer in TourConnect team so I was responsible for whole design process including research, use-case analysis, user feedback review, user flow design, prototyping and user interface design. <br>The primary goal of my job is to provide better experience for users in Connection, in order to increment the business opportunities for users.​</span>
 			        </div>
 			    </div>
 	        </div>
@@ -77,7 +77,7 @@
 	        	<div class="section_text" style="width: 100%;padding:20px 0 80px 0;margin: 0;">
 			        <div class="row_text">
 			        	<h2>Research</h2>
-			        	<h3 style="color:#777;font-size:1.25rem; font-weight:200; width:55%; margin:0 auto;">We have three types users which are accommodation supplier, non-accommodation supplier and buyer. So our team mapped the existing user flows, analyzed the user feedbacks and interviewed different categories users to try to understand why some users think our product can not help them to find new valuable partners. Later on, We realized the problem is not quite at the build connection process but right at the beginning of the sign up.</h3>
+			        	<h3 style="color:#777;font-size:1.25rem; font-weight:200; width:55%; margin:0 auto;text-align:left;">We have three types users which are accommodation supplier, non-accommodation supplier and buyer. So our team mapped the existing user flows, analyzed the user feedbacks and interviewed different categories users to try to understand why some users think our product can not help them to find new valuable partners. Later on, We realized the problem is not quite at the build connection process but right at the beginning of the sign up.</h3>
 			        </div>
 			    </div>
 			    <div class="design_img_b design_img_b_3">
@@ -88,7 +88,7 @@
             <div class="section part part_4" style="background:#00BCD4;">
 	    		<div class="section_text" style="width:55%; z-index:2; position:relative;margin:0 auto;padding:0px;">
 			        <div class="title_inside" style="color:#fff;text-align:center;padding:0px;">Ideation</div>
-			        <div class="design_ui" style="color:#eee;text-align:center;padding:0px;">
+			        <div class="design_ui" style="color:#eee;text-align:left;padding:0px;">
 			        	<span>After rounds of ideation and refine, our final design divided our target users into five categorise, and customized the new user flows related their scenarios and primary goals. More specifically, we redefined the user categories and identified users' goals at sign up，regrouped informations and guided them by bubble box to complete their company profile in order to accomplish their primary goal. We also cooperated with trigger email to encourage users to make their profile more pretty. The new user flows incredibly reduced the information input time and operation steps. Additional, they enhanced the product usability to make users don’t need to think about how to use our product.</span>
 			        </div>
 			    </div>
@@ -98,7 +98,7 @@
 		        <div class="section_text" style="width: 100%;padding-bottom:55px;margin: 0 auto; width:55%;">
 			        <div class="row_text">
 			        	<h2 style="color:#333;">User Journey</h2>
-			        	<h3 style="color:#777;font-size:1.25rem; font-weight:300;">We analyzed existing user journey, and mapped new user journey. Then we create new user journey for each user categorise.</h3>
+			        	<h3 style="color:#777;font-size:1.25rem; font-weight:300;text-align:left;">We analyzed existing user journey, and mapped new user journey. Then we create new user journey for each user categorise.</h3>
 			        </div>
 			    </div>
 			    <div class="design_img_b" style="width:65%;">
@@ -110,7 +110,7 @@
 	    		<div class="section_text" style="width: 100%;padding-bottom:55px;margin: 0;">
 			        <div class="row_text" style="width: 55%; margin:0 auto;">
 			        	<h2>Prototypes</h2>
-			        	<h3 style="color:#777;font-size:1.25rem; font-weight:300;">This design is verifiable, which is less costly and less operationally complex than the previous design, a quick way to achieve users' goal is the key challenge.</h3>
+			        	<h3 style="color:#777;font-size:1.25rem; font-weight:300;text-align:left;">This design is verifiable, which is less costly and less operationally complex than the previous design, a quick way to achieve users' goal is the key challenge.</h3>
 			        </div>
 			    </div>
 			    <div class="design_img_b">
@@ -122,7 +122,7 @@
             <div class="section part part_7">
             	<div class="section_text" style="width: 100%;padding-bottom:55px;margin: 0;">
 			        <div class="row_text">
-			        	<a href="" target="view_window" style="position: relative;display: inline-block;padding: 20px 25px;background: #258de8;border-radius: 10px; color:#fff; pointer-events: none"><h1>More Details Coming Soon</h1></a>
+			        	<a href="" target="view_window" style="position: relative;display: inline-block;padding: 20px 25px;background: #00BCD4;border-radius: 10px; color:#fff; pointer-events: none"><h1>More Details Coming Soon</h1></a>
 			        </div>
 			    </div>
             </div>
